# fastapi-scalable-aws

./: .gitignore  README.md
.github/workflows/: main.yml
ci_cd/python/: Dockerfile
infrastructure/global/vpc/: main.tf  network.tf  variables.tf
services/talk_booking/: pyproject.toml
